splited logical part of compiler from the view creating Compiler class, improved legibility and perfomance